[package]
name = "latexcompile_fasterbeamer"
description = "The is a small wrapper around pdflatex oder some other command with adaption for usage with faster-beamer"
repository = "https://github.com/theHamsta/latexcompile.git"
keywords = ["latex", "wrapper"]
categories = ["template engine"]
readme = "README.md"
license-file = "LICENSE"
version = "0.1.0"
authors = ["Henrik Jürges <juerges.henrik@gmail.com>", "Stephan Seitz <stephan.seitz@fau.de>"]
edition = "2018"
exclude = ["assets/*"]

[dependencies]
failure = "0.1.2"
failure_derive = "0.1.2"
log = "0.4"
regex = "^1.0"
tempfile = "3.0.3"
