[package]
name = "latexcompile_fasterbeamer"
description = "The is a small wrapper around pdflatex oder some other command with adaption for usage with faster-beamer"
repository = "https://github.com/theHamsta/latexcompile.git"
keywords = ["latex", "wrapper"]
categories = ["template engine"]
readme = "README.md"
license-file = "LICENSE"
version = "0.1.0"
authors = ["Henrik Jürges <juerges.henrik@gmail.com>", "Stephan Seitz <stephan.seitz@fau.de>"]
edition = "2018"
exclude = ["assets/*"]

[dependencies]
failure = "0.1.6"
failure_derive = "0.1.6"
log = "0.4.8"
regex = "1.3.1"
tempfile = "3.1.0"
symlink = "0.1.0"
